[package]
name = "dary"
version = "0.1.0"
authors = ["ng3rdstmadgke <ng3rdstmadgke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
rand = "0.7.2"
bincode = "1.2.0"
serde = "1.0.102"
serde_derive = "1.0.34"